--- a/web/public/index.html
+++ b/web/public/index.html
@@ -7,6 +7,11 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
+  <style>
+    body {
+      overflow: hidden;
+    }
+  </style>
   <body>
     <noscript>
       <strong
